# ml_playground

./: pyproject.toml
Math/: main.py
Nets/CNN/: main.py
Nets/CoupleGAN/: main.py
Nets/DALLE-mini/: main.py
Nets/DCGAN/: main.py
Nets/DQN/: main.py
Nets/FashionGAN/: main.py
Nets/GAN/: main.py
Nets/Pix2Pix/: datasets.py  pix2pix.py
Nets/SimpleNet/: main.py
Nets/SimpleNet/result/: simple_net
Nets/StyleGAN/: main.py
Nets/Test/: main.py
