[tool.poetry]
name = "Ml Playground"
version = "0.1.0"
description = ""
authors = ["NickiHell <nickihell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "*"
matplotlib = "*"
numpy = "*"
loguru = "*"
pyglet = "*"
torchvision = "*"
torchaudio = "*"
torch = "*"
pytz = "*"
transformers = "*"
jax = "*"
vqgan_jax = { git = "https://github.com/patil-suraj/vqgan-jax", branch = "main" }
dalle-mini = { git = "https://github.com/borisdayma/dalle-mini", branch = "main" }
stylegan2-pytorch = "^1.8.7"

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
