[tool.poetry]
name = "Ml Playground"
version = "0.1.0"
description = ""
authors = ["NickiHell <nickihell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "*"
matplotlib = "*"
numpy = "*"
loguru = "*"
pyglet = "*"
torchvision = "*"
torchaudio = "*"
torch = "*"
pytz = "*"
transformers = "*"
stylegan2-pytorch = "*"
torchtext = "^0.11.0"
utils = "^1.0.1"
transforms = "^0.1"

[tool.poetry.dev-dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
